force-app/main/default/objects/Taxonomy_Staging_Data__c/Taxonomy_Staging_Data__c.object-meta.xml
<CustomObject>
    <description>This data stores (a) Location Taxonomy Data as well as (b) Issue Taxonomy Data. We will use data loader to store CSV file data in this object.</description>
    <label>Taxonomy Staging Data</label>
    <nameField>
        <displayFormat>TSD-{0000000}</displayFormat>
        <label>Taxonomy Staging Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxonomy Staging Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>