force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Customer_facing_sort_order_L2__c.field-meta.xml
<CustomField>
    <fullName>Customer_facing_sort_order_L2__c</fullName>
    <label>Customer facing sort order L2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>