force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Customer_Value_L2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_L2__c</fullName>
    <label>Customer Value L2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>