force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Customer_Value_L3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_L3__c</fullName>
    <label>Customer Value L3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>