force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Issue_Accountability__c.field-meta.xml
<CustomField>
    <fullName>Issue_Accountability__c</fullName>
    <description>This will be mapped from Issue Taxonomy sheet.</description>
    <inlineHelpText>This will be mapped from Issue Taxonomy sheet.</inlineHelpText>
    <label>Issue Accountability</label>
    <length>100</length>
    <type>Text</type>
</CustomField>