force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>