force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <description>Level 1 value (This is mapped from &quot;Location Type&quot; column from Location Taxonomy and &quot;Moment&quot; column from Issue Taxonomy).</description>
    <inlineHelpText>Level 1 value (This is mapped from &quot;Location Type&quot; column from Location Taxonomy and &quot;Moment&quot; column from Issue Taxonomy)</inlineHelpText>
    <label>Level 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>