force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <description>Level 2 value (This is mapped from &quot;Area&quot; column from Location Taxonomy and &quot;Category&quot; column from Issue Taxonomy).</description>
    <inlineHelpText>Level 2 value (This is mapped from &quot;Area&quot; column from Location Taxonomy and &quot;Category&quot; column from Issue Taxonomy).</inlineHelpText>
    <label>Level 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>