force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Level_3__c.field-meta.xml
<CustomField>
    <fullName>Level_3__c</fullName>
    <description>Level 3 value (This is mapped from &quot;Location&quot; column from Location Taxonomy and &quot;Issue&quot; column from Issue Taxonomy).</description>
    <inlineHelpText>Level 3 value (This is mapped from &quot;Location&quot; column from Location Taxonomy and &quot;Issue&quot; column from Issue Taxonomy).</inlineHelpText>
    <label>Level 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>