force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Will contain the value as per the XLS worksheet label (e.g. Bus, Train, ...)</description>
    <inlineHelpText>Will contain the value as per the XLS worksheet label (e.g. Bus, Train, ...)</inlineHelpText>
    <label>Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>