force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Staff_facing_sort_order_L3__c.field-meta.xml
<CustomField>
    <fullName>Staff_facing_sort_order_L3__c</fullName>
    <label>Staff facing sort order L3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>