force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Status_Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>Status_Customer_Facing__c</fullName>
    <label>Status - Customer Facing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>