force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Status_NSWT_Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>Status_NSWT_Customer_Facing__c</fullName>
    <label>Status - NSWT Customer Facing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>