force-app/main/default/objects/Taxonomy_Staging_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Would contain &quot;Location&quot; for Location taxonomy data. Would contain &quot;Case Categorisation&quot; for Issue taxonomy data.</description>
    <inlineHelpText>Would contain &quot;Location&quot; for Location taxonomy data. Would contain &quot;Case Categorisation&quot; for Issue taxonomy data.</inlineHelpText>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>