force-app/main/default/objects/Taxonomy_Staging_Data__c/listViews/Train.listView-meta.xml
<ListView>
    <fullName>Train</fullName>
    <columns>Status_Customer_Facing__c</columns>
    <columns>Status_NSWT_Customer_Facing__c</columns>
    <columns>Status_ST_Customer_Facing__c</columns>
    <columns>Status_Staff_Facing__c</columns>
    <columns>Agency__c</columns>
    <columns>Customer_Value__c</columns>
    <columns>Driver__c</columns>
    <columns>Issue_Accountability__c</columns>
    <columns>KPI__c</columns>
    <columns>Level_1__c</columns>
    <columns>Mode__c</columns>
    <columns>Level_2__c</columns>
    <columns>Level_3__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>Train</value>
    </filters>
    <label>Mode - Train</label>
</ListView>